--- a/playground/package.json
+++ b/playground/package.json
@@ -19,7 +19,6 @@
     "tsc:watch": "tsc -p ./ --noEmit -w"
   },
   "dependencies": {
-    "@babel/polyfill": "7.4.4",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.8",
     "@types/prop-types": "15.7.1",
@@ -27,7 +26,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "7.0.8",
     "@types/react-router-dom": "4.3.2",
-    "axios": "0.18.0",
+    "axios": "^0.19.0",
     "connected-react-router": "6.5.0",
     "cuid": "2.1.6",
     "prop-types": "15.7.2",
@@ -37,7 +36,7 @@
     "react-redux-typescript-scripts": "1.5.0",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.8",
-    "react-scripts": "2.1.8",
+    "react-scripts": "3.0.1",
     "react-testing-library": "7.0.0",
     "redux": "4.0.1",
     "redux-observable": "1.1.0",
